--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
         <script src="Crud.js"></script>
     </head>
     <body>
-        <label>Enter Rollno:</label>
-        <input type="text" id="rollno"></body><br/>
-        <label>Enter Student Name</label>
-        <input type="text" id="name"><br/>
-        <button onclick="insertData()">Insert</button>
-        <button onclick="deleteData()">Delete</button>
-        <button onclick="updateData()">Update</button>
-        <button onclick="readData()">Read</button>
+        <center>
+            <p></p>
+            <h2>Firebase CRUD Operations</h2>
+            <p><label>Enter Rollno:</label>
+            <input type="text" id="rollno"></p>
+            <p><label>Enter Student Name:</label>
+            <input type="text" id="name"></p>
+            <button onclick="insertData()">Insert</button>
+            <button onclick="deleteData()">Delete</button>
+            <button onclick="updateData()">Update</button>
+            <button onclick="readData()">Read</button>
+        </center>
     </body>
 </html>
